fix post highlighting on mobile devices

--- a/public/css/20xx.css
+++ b/public/css/20xx.css
@@ -322,4 +322,14 @@ input[type="submit"]:hover {
     white-space: normal;
     max-height: 100%;
   }
+
+  .metadata {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  .anchor {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
 }
